# low-seq-snp-calling

./: .gitignore  README.md  compute_genotype_metrics.py  diploma.yml  environment.yml  launch_experiments.py  launch_metrics.py  pipeline_param.sh  plot_lowseq_report.py  rename_samples.tsv  samples  setup.cfg
lowseq_runner/: cli.py  config.py  experiments.py  genotype_metrics.py  metrics.py  orchestrator.py  report.py  shell.py
utils/: extract_truth_from_panel.sh  renaming.sh  test.sh  trimming.sh  yc-sync.sh
