[metadata]
name = lowseq-runner
version = 0.1.0
description = Low-pass sequencing SNP calling experiment runner
author = Elena Ivankina, Maria Bektasheva
license = MIT

[options]
packages = find:
python_requires = ~=3.13
install_requires =
    pandas
    seaborn
    matplotlib
    pysam
    python-dotenv
    pydantic
    tabulate

[options.entry_points]
console_scripts =
    lowseq = lowseq_runner.cli:main

[flake8]
max-line-length = 80
exclude =
    .git,
    .venv,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info

[dev]
install_requires =
    Flake8-pyproject==1.1.0
    flake8==5.0.4
    isort==5.12.0
    toml==0.10.2
    yapf==0.40.2

[yapf]
based_on_style = pep8
column_limit = 80
indent_width = 4
split_before_logical_operator = true
